src/components/DoctorProfile/doctorProfile.css
/* ... */
.arrow-doctor:disabled {
  color: orange;
  cursor: not-allowed;
} */


.arrow-doctor-one {
 position: relative;
  align-items: center;
  justify-content: center;
  width: 40px !important;
  height: 40px;
  border: 1px solid #ddd;
  border-radius: 50%;
  cursor: pointer;
  color: orange;
  left: -90px;
  top: 120px;
}
.arrow-doctor-one:disabled {
  color: orange;
  cursor: not-allowed;
}


.arrow-doctor-two {
  position: relative;
  align-items: center;
  justify-content: center;
  width: 40px !important;
  height: 40px;
  border: 1px solid #ddd;
  border-radius: 50%;
  cursor: pointer;
  color: orange;
  left: 200px;
  top: -55px;
}
.arrow-doctor-two:disabled {
  color: orange;
  cursor: not-allowed;
}
.date-carousel-doctor {
  text-align: center;
  display: flex;
  /* justify-content: space-evenly; */
  flex-grow: 1;
  position: relative;
  left: -10px;
}


.date-item-doctor {
  padding: 10px 20px;
  cursor: pointer;
  text-align: center;
  flex: 1;
  border-bottom: 2px solid #eee;
  transition: border-bottom 0.3s;
}

.date-item-doctor.active {
  border-bottom: 2px solid #007bff;
  color: #000000;
}
.date-item-doctor.active h3{
  color: #000000;
  font-weight: bold;
}
.underline-doctor {
  position: relative;
  height: 5px;
  background-color: #F0F0F5;
  margin: 0 100px;
}

.underline-doctor-active {
  position: absolute;
  height: 5px;
  background-color: #2AA7FF;
  transition: left 0.3s, width 0.3s;
}
  
.date-item-doctor h3 {
  margin: 5px 0;
  font-size: 14px;
}

.date-item-doctor .slots-available-doctor {
  color: green;
  font-size: 14px;
}

/* Time slots group styles */
.time-slots-group-doctor {
  margin-bottom: 20px;
  border-bottom: #e6f7ff solid 1px;
  padding-bottom: 20px;
}
.time-slots-group-doctor h6{
  font-size: 14px;
  margin: 10px 30px 10px -80px;
  font-weight: 400;
}

/* Time slots container styles */
.time-slots-doctor {
  display: flex;
  justify-content: flex-start; /* Align to start */

}

/* Individual time slot button styles */
.time-slot-doctor {
  background: white;
  border: 1px solid #37adff;
  border-radius: 5px;
  padding: 5px 20px;
  margin: 5px;
  cursor: pointer;
  font-size: 13px;
  color: #37adff;
  white-space: nowrap;

}

.time-slot-doctor:hover {
  background: #e6f7ff;
  border-color: #007bff;
}
.time-slot-doctor.selected {
  background-color: #007bff; /* Change to your desired color */
  color: #fff;
  border: none; /* Optionally remove border */
}

.c{
  margin-top: 20px;
  border-top: #eee solid 1px;
}

.doctor-profile-container{
  width: 100%;
height: auto;
top: 0%;
left: 72px;
position: relative;
display: flex;
margin-left: auto;
margin-right: auto;
}
.doctor-details {
 position: relative;
 top: -280px;
  }
  
.doctor-profile-img{
    width: 311px;
height: 341px;
top:-440px;


border-radius: 53px 0px 53px 0px;

background: #D9D9D9;
box-shadow: 0px 11px 26.9px 9px #4254784D inset;
background-size: cover;
position: relative;
  
/* background-size: 135% 135%;
background-position:50% top;  */
}
.doctorname{
    width: 318px;
height: 28px;
top: -140px;
left: 50px;

font-family: Matter;
font-size: 36px;
font-weight: 600;
line-height: 28px;
text-align: left;
color: #272848;
position: relative;

}
.education{
    display: flex;
    top: -140px;
    position: relative;
    margin-left: 22px;
}

.degree{
    position: relative;
    width: 270px;
    height: 28px;
   left: 10px;
    margin-top:16px ;
    font-family: Matter;
    font-size: 20px;
    font-weight: 600;
    /* line-height: 28px; */
    text-align: left;
    color: #272848;
        
}
.doctor-discription{
    margin-top: -100px;
    position: relative;
display: flex;
margin-left: 10%;
top:-30px;
}

.inperson{

    width: 122px;
height: 20px;
font-family: Matter;
font-size: 14px;
font-weight: 400;
line-height: 19.6px;
text-align: left;
color: #414146;
display: flex;
position: relative;

}
.inperson svg{

    margin-right: 3px;   
}
.videoconsultation{
    width: 182px;
    height: 20px;
    font-family: Matter;
    font-size: 14px;
    font-weight: 400;
    line-height: 19.6px;
    text-align: left;
    color: #414146;
    position: relative;
    display: flex;
}
.videoconsultation svg{
    margin-top: 3px;
    margin-right: 2px;
}
   

.onlineprescription{
    width: 182px;
    height: 20px;
    font-family: Matter;
    font-size: 14px;
    font-weight: 400;
    line-height: 19.6px;
    text-align: left;
    color: #414146;
    position: relative;
}
.doctor-discription-icon{
    color: #37ADFF;
}

.doctor-objective{
    position: relative;
    width: 488px;
height: 40px;
top: 0px;
left: 10%;
gap: 0px;

font-family: Matter;
font-size: 14px;
font-weight: 400;
line-height: 19.6px;
text-align: left;
color: #414146;

}
.share-box{
    width: 1432px;
height: 179px;
margin-top: 23%;
left: 4px;
gap: 0px;
border: 1px 0px 0px 0px;
position: relative;
background: #E4EDFF;
border: 1px solid #0000001A
}

.share-icon{
    position: relative;
    width: 18px;
height: 24.96px;
top: 96px;
left: 778px;
color: #37ADFF;

    background :url("../../assests/img/Vector-4.svg");
}
.share-text{
    position: relative;
    width: 38px;
height: 20px;
top: 73px;
left: 803px;;
font-family: Matter;
font-size: 14px;
font-weight: 600;
line-height: 19.6px;
text-align: left;
color: #414146;

}

.save-icon{
    position: relative;
    width: 19px;
height: 17px;
top: 39px;
left: 857px;;
color: #37ADFF;
 background: url("../../assests/img/Vector-5.svg");
}

.save-text{
    position: relative;
    width: 31px;
height: 20px;
top: 20px;
left: 886px;
font-family: Matter;
font-size: 14px;
font-weight: 600;
line-height: 19.6px;
text-align: left;
color: #414146;

}

.Appointment-container{
    position: relative;
    width: 360px !important;
height: 409px;
left: -30px !important;
border-radius: 15px;
background: #ffffff;
border: 1px solid #0000001A;
z-index: 1; 


display: flex; 
flex-direction: column;

top:10% !important;
width: 100%;
max-width: 440px;
margin-left: auto;
margin-right: auto;

}
/* ... */

